Colaboratory を使用して作成しました

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -6,7 +6,7 @@
       "name": "temp.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN7irfRRADSP78m8Fcdu46j",
+      "authorship_tag": "ABX9TyPgrXBrhlqwMZfZ3erYjcgu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,13 +60,13 @@
         "}\n",
         "\n",
         "int main() {\n",
-        "  string str1 = \"Now I need a drin.\";\n",
-        "  string str2 = \n",
+        "  string str = \n",
+        "  \"Now I need a drink.\"\n",
         "  \"this\"\n",
         "  \"is a\"\n",
         "  \"pen\";\n",
-        "  string str3;\n",
-        "  str3 = regex_replace(str1, regex(\"[ .,]+\"), \" \");\n",
+        "  string str02;\n",
+        "  str02; = regex_replace(str1, regex(\"[ .,]+\"), \" \");\n",
         "  vector<string> words = split(str2, ' ');\n",
         "  for (auto& item : words){\n",
         "      cout << item << \" \";\n",
@@ -75,11 +75,11 @@
         "}"
       ],
       "metadata": {
-        "id": "rI6OtbnWrk5N",
-        "outputId": "7dc7a9dc-ffeb-4ddf-d963-cfb28b885460",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rI6OtbnWrk5N",
+        "outputId": "7dc7a9dc-ffeb-4ddf-d963-cfb28b885460"
       },
       "execution_count": 25,
       "outputs": [
@@ -98,11 +98,11 @@
         "!g++ temp.cpp; ./a.out"
       ],
       "metadata": {
-        "id": "xN-bjdaTrkxZ",
-        "outputId": "089e546f-95b7-4723-9ebf-b9d95b1c8f51",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xN-bjdaTrkxZ",
+        "outputId": "089e546f-95b7-4723-9ebf-b9d95b1c8f51"
       },
       "execution_count": 26,
       "outputs": [
@@ -111,6 +111,142 @@
           "name": "stdout",
           "text": [
             "thisis apen \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 実験 vector の連結\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "string formatVecStr(vector<string> vec){\n",
+        "    string str = \"\";\n",
+        "    str +=\"{\";\n",
+        "    bool isFirst = true;\n",
+        "    for (auto item : vec){\n",
+        "        if(!isFirst) str += \", \";\n",
+        "        str = str + '\"' + item + '\"';\n",
+        "        isFirst = false;\n",
+        "    };\n",
+        "    str += \"}\";\n",
+        "    return str;\n",
+        "}\n",
+        "\n",
+        "int main(){\n",
+        "    vector<string> vec = {\"this\", \"is\", \"a\", \"pen\"};\n",
+        "    vector<string> vec02 = {\"that\", \"is\", \"not\", \"a\", \"pen\"};\n",
+        "    vec.insert(vec.end(), vec02.begin(), vec02.end());\n",
+        "    cout << formatVecStr(vec) << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "Y4dtgAs-wLIX",
+        "outputId": "91574800-a342-48b1-de38-4ceb92b9a5ad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "id": "zLc6f-mDwdSg",
+        "outputId": "c78d07d2-5fef-4ea0-fb31-a883df305428",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{\"this\", \"is\", \"a\", \"pen\", \"that\", \"is\", \"not\", \"a\", \"pen\"}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# c++ formatVecStr を作る\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "string formatVecStr(vector<string> vec){\n",
+        "    string str = \"\";\n",
+        "    str +=\"{\";\n",
+        "    bool isFirst = true;\n",
+        "    for (auto item : vec){\n",
+        "        if(!isFirst) str += \", \";\n",
+        "        str += item;\n",
+        "        isFirst = false;\n",
+        "    };\n",
+        "    str += \"}\";\n",
+        "    return str;\n",
+        "}\n",
+        "\n",
+        "int main(){\n",
+        "    vector<string> vec = {\"this\", \"is\", \"a\", \"pen\"};\n",
+        "    cout << formatVecStr(vec) << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "mytpimd8u_yh",
+        "outputId": "25e10a96-c982-4102-a1d1-d8553bf7e949",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "id": "zeIW9CEQvh5A",
+        "outputId": "c5a9c655-4b97-4900-b754-6dd440589bd1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{this, is, a, pen}\n"
           ]
         }
       ]
