Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO46ogbNmY1yA2rBhA+mgls",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOw1A7zt8h311nPk1W7FR7N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5592,17 +5593,6 @@
     {
       "cell_type": "code",
       "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "8dH9k9fYYZ0V"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# 例題\n",
         "%%writefile temp.cpp\n",
         "// 0からnまでの総和を計算し、途中結果を出力する\n",
@@ -6102,6 +6092,7 @@
         "# ATC001 A - 深さ優先探索\n",
         "# これ以降の問題は例題で扱った問題とは少し異なっています。 \n",
         "# 3.05.ビット演算で説明しているビット全探索を用いることで、再帰関数無しで解くこともできます。\n",
+        "\n",
         "# 高橋君の住む街は長方形の形をしており、格子状の区画に区切られています。 \n",
         "# 長方形の各辺は東西及び南北に並行です。 各区画は道または塀のどちらかであり、\n",
         "# 高橋君は道を東西南北に移動できますが斜めには移動できません。 \n",
@@ -6120,6 +6111,7 @@
         "# 高橋君は家・魚屋・道は通ることができるが、塀は通ることができない。\n",
         "# 塀を 1 回も壊さずに、家から魚屋まで辿り着くことができる場合は Yes、辿りつけない場合は No \n",
         "# を標準出力に 1 行で出力せよ。\n",
+        "\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -6167,10 +6159,22 @@
         "}"
       ],
       "metadata": {
-        "id": "jGIpWJ3x_M0d"
+        "id": "jGIpWJ3x_M0d",
+        "outputId": "29f5e85e-b4c5-47f7-9973-49d7748bad2b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
