--- a/temp.ipynb
+++ b/temp.ipynb
@@ -6,7 +6,7 @@
       "name": "temp.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPgrXBrhlqwMZfZ3erYjcgu",
+      "authorship_tag": "ABX9TyMIsupDhv8Yd3GMinU7e/Z8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,74 @@
       "metadata": {
         "id": "KBSwAUuU4s_Y"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# heredocument から変数への入力\n",
+        "%%writefile temp.cpp\n",
+        "# include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "const string  str = R\"(\n",
+        "2 3\n",
+        "tiis is a ペン\n",
+        ")\";\n",
+        "int main(){\n",
+        "    stringstream ss(str);\n",
+        "    int N, M;\n",
+        "    ss >> N >> M;\n",
+        "    vector<string> vec(4);\n",
+        "    for (int i = 0; i < 4; i++) {\n",
+        "        ss >> vec.at(i);\n",
+        "    }\n",
+        "    cout << N << \" \" << M << endl;\n",
+        "    for (int i = 0; i < 4; i++) {\n",
+        "        cout << vec.at(i) << \" \";\n",
+        "    }\n",
+        "    cout << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "W2iNf4roPALx",
+        "outputId": "8047f6bb-f0db-45ee-c511-8683890aff44",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "id": "Ivp5uovGP6AU",
+        "outputId": "0d3b9966-2eb5-4c71-e3e1-dbc2fecf95f5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2 3\n",
+            "tiis is a ペン \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -81,7 +149,7 @@
         "id": "rI6OtbnWrk5N",
         "outputId": "7dc7a9dc-ffeb-4ddf-d963-cfb28b885460"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,7 +172,7 @@
         "id": "xN-bjdaTrkxZ",
         "outputId": "089e546f-95b7-4723-9ebf-b9d95b1c8f51"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,7 +218,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,7 +241,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,7 +285,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,7 +308,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
