Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP+FHPiZsBRQfH5F5g4Hta5",
+      "authorship_tag": "ABX9TyOjcE6DzXob5WVxi1DcUAjP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,7 +79,7 @@
         "  cout << \"Hello World!\" << endl;\n",
         "}"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,7 +111,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -518,7 +518,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RLbtIfo3-ezx"
+        "id": "RLbtIfo3-ezx",
+        "outputId": "80d11718-c6f4-49de-fbec-b68561105a94",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -532,19 +536,40 @@
         "  cout << PI;\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "G5ydxV_O-jef"
+        "id": "G5ydxV_O-jef",
+        "outputId": "ad1776c5-4bad-4440-99fe-51235dd92ef0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "60\n",
+            "3.14"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -584,10 +609,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_N9MptadGY1W"
+        "id": "_N9MptadGY1W",
+        "outputId": "c89863c3-44d8-4734-f397-6e9ca6a278c3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# input\n",
+        "# 入力\n",
         "# `cin` で標準入力を受け付ける\n",
         "# 次のプログラムは本来はインタラクティブにユーザーが数字を入力することを想定しているが\n",
         "# colab のコードセルでは、インプット待ちになってしまい具合が悪い。\n",
@@ -607,19 +636,107 @@
         "  cout << \"Sum is: \" << sum;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dKO1hxPIGZYP"
+        "id": "dKO1hxPIGZYP",
+        "outputId": "68e7e222-f935-4f18-d265-3beb98db0b39",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp;  echo 3 7 |./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Type a number: Type another number: Sum is: 10"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# heredocument から変数への入力実験\n",
+        "%%writefile temp.cpp\n",
+        "# include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "const string  str = R\"(\n",
+        "2 3\n",
+        "tiis is a ペン\n",
+        ")\";\n",
+        "int main(){\n",
+        "    stringstream ss(str);\n",
+        "    int N, M;\n",
+        "    ss >> N >> M;\n",
+        "    vector<string> vec(4);\n",
+        "    for (int i = 0; i < 4; i++) {\n",
+        "        ss >> vec.at(i);\n",
+        "    }\n",
+        "    cout << N << \" \" << M << endl;\n",
+        "    for (int i = 0; i < 4; i++) {\n",
+        "        cout << vec.at(i) << \" \";\n",
+        "    }\n",
+        "    cout << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W2iNf4roPALx",
+        "outputId": "8047f6bb-f0db-45ee-c511-8683890aff44"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ivp5uovGP6AU",
+        "outputId": "0d3b9966-2eb5-4c71-e3e1-dbc2fecf95f5"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2 3\n",
+            "tiis is a ペン \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -665,11 +782,25 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "rFJLtW6gPOk9"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "OWmRqKMBAQ4u"
+        "id": "OWmRqKMBAQ4u",
+        "outputId": "def14bc0-bd8f-4a53-f610-e7dc4059778b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
+        "# \n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -681,24 +812,49 @@
         "  cout << d1;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_14b2DtCAVpP"
+        "id": "_14b2DtCAVpP",
+        "outputId": "66bd91dd-de19-4c40-9370-548c213daa37",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "35000\n",
+            "120000"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "W0AAUO0bAtxJ"
+        "id": "W0AAUO0bAtxJ",
+        "outputId": "431f7075-59f6-4319-eae1-85567fa38070",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# true は 1 で false は 0 \n",
@@ -713,24 +869,49 @@
         "  cout << isFishTasty;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-gl8iyL5Aym2"
+        "id": "-gl8iyL5Aym2",
+        "outputId": "10d4561b-17a6-4e87-87a1-5fac98091a43",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "0"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3IU5jEfcA-X-"
+        "id": "3IU5jEfcA-X-",
+        "outputId": "16fc8de5-06bf-45b2-db1a-2fe9e9613e65",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -741,24 +922,48 @@
         "  cout << myGrade << endl;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NTCm8SvcBCd-"
+        "id": "NTCm8SvcBCd-",
+        "outputId": "5ce64ef8-90c0-441f-f382-34a97654369e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "B\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0CmJwJybRjc7"
+        "id": "0CmJwJybRjc7",
+        "outputId": "f0c355ea-213f-4231-a320-c7bb64ec64d6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -771,19 +976,96 @@
         "  cout << c;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ENlZzWMRRqDt"
+        "id": "ENlZzWMRRqDt",
+        "outputId": "2a438480-5a56-43cf-85fc-6cbf8fbb2d16",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ABC"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# stringstream に出し入れ出来るか #=> 出来るけどつながってしまう\n",
+        "%%writefile temp.cpp\n",
+        "# include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "int main () {\n",
+        "  int a = 65, b = 66, c = 67;\n",
+        "  stringstream ss(\"\");\n",
+        "  ss << a << b << c;\n",
+        "  int x;\n",
+        "  ss >> x;\n",
+        "  cout << x << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "KQm9nU2NTub5",
+        "outputId": "10525f8c-3684-4837-8e5a-a21822de16e2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "id": "KBa8Lg8kUKTJ",
+        "outputId": "d5c95bc2-1c67-48a6-89c2-1410627f377a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "656667\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
