--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOaFBG+zWH9oJ7VC74c7j3c",
+      "authorship_tag": "ABX9TyMBhNCzemXqVpBAaa6lXQwU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,9 @@
         "\n",
         "https://atcoder.jp/contests/apg4b\n",
         "\n",
-        "とても良いテキストだと思う"
+        "とても良いテキストだと思う\n",
+        "\n",
+        "が読み方に失敗した。途中に出てくる難しい問題も解こうとしたのが失敗の原因。どうするか。まあいいか。"
       ],
       "metadata": {
         "id": "8kHv-8CgciQc"
@@ -80,15 +82,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6006a174-0f10-4292-d2a6-c9aaf4fbe6f5"
+        "outputId": "2ed65db2-5999-4d4c-a85d-264a9a3abb3c"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting temp.cpp\n"
+            "Writing temp.cpp\n"
           ]
         }
       ]
@@ -103,9 +105,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "918544dc-e746-4616-ff3a-079b3cc88125"
+        "outputId": "649c43dd-8e7d-49fb-d034-325ac326d736"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,8 +121,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 実験\n",
-        "# 質問 int main(int argc, char *argv[]) はどうか #=> 実験してみよう\n",
+        "# int main(int argc, char *argv[]) はどうか #=> 実験してみよう\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -132,12 +133,12 @@
       ],
       "metadata": {
         "id": "N6JoT1wTAeIh",
-        "outputId": "ebe489d0-f61c-473a-9629-5e2f5c088f88",
+        "outputId": "fa97c9cb-94cc-44e6-e703-bbdae15d385c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,12 +156,12 @@
       ],
       "metadata": {
         "id": "CjMZ9oCAB6dn",
-        "outputId": "d066883d-3a79-4579-d819-92f4a3c5d105",
+        "outputId": "db15bad3-1515-4f77-8d9e-090e8b023646",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -175,8 +176,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 問題\n",
-        "# EX1 - コードテストと出力の練習 \n",
+        "# 問題 EX1 - コードテストと出力の練習 \n",
         "# こんにちは AtCoder と出力する\n",
         "# 改行を入れる\n",
         "%%writefile temp.cpp\n",
@@ -190,12 +190,12 @@
       ],
       "metadata": {
         "id": "OHELUdVTDN3L",
-        "outputId": "882a5abe-1447-4d3c-a9b9-e49563954aae",
+        "outputId": "99fd6ca4-e69b-48b5-bd40-8bcd0a12f6b9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,8 +233,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 問題\n",
-        "# EX2 - エラーの修正 \n",
+        "# 問題 EX2 - エラーの修正 \n",
         "# 以下のプログラムは修正後\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
@@ -290,15 +289,15 @@
     {
       "cell_type": "code",
       "source": [
-        "# 問題\n",
-        "# EX3 - 計算問題 \n",
+        "# 問題 EX3 - 計算問題 \n",
         "# 公式を使って1から100までの和を求める\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
+        "\n",
         "int main() {\n",
         "  cout <<  (100 + 1) * 100 / 2 << endl;\n",
-        "}\n"
+        "}"
       ],
       "metadata": {
         "id": "_pKMrFEUFw3t",
@@ -340,6 +339,78 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# sum という関数があるかどうかの実験\n",
+        "#=> sum はなかったが accumulate がある\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "    vector<int> vec = {1,2,3,4};\n",
+        "\n",
+        "    int vec_sum = accumulate(vec.begin(), vec.end(), 0); \n",
+        "    cout << \"sum of vec = \" << vec_sum << endl;\n",
+        "\n",
+        "    int vec_product = accumulate(vec.begin(), vec.end(),1, multiplies<>()); // plus<>() にすれば加算\n",
+        "    cout << \"product of vec = \" << vec_product << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "BaAeRuhghnLj",
+        "outputId": "722a3d19-096c-49f2-ccb2-59a01a005f10",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "id": "7E21VqMiiD2A",
+        "outputId": "10395d42-58de-4d28-897e-c316a31e86a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "sum of vec = 10\n",
+            "product of vec = 24\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "iyw-ARZtimG4"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
