Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOjQwUS+in6VNV8wInhdhnv",
+      "authorship_tag": "ABX9TyNx8WQ8htTqjS5+xebhVmeV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1979,9 +1979,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# 関数で vector を返り値にする\n",
-        "# str2vec で文字列を vector にする\n",
-        "# 文字列は utf-8 が前提\n",
+        "# utf-8 の文字数を返す関数を作りたい。そのために\n",
+        "# str2vec と言う vector<str> を返り値にした関数を作る\n",
+        "# str に utf-8 の 1 文字が入る\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -2015,18 +2015,18 @@
       ],
       "metadata": {
         "id": "LNYM-g0NkM9w",
-        "outputId": "7e2b0aa9-480d-4315-a803-85e4941711fb",
+        "outputId": "f9e2a6ed-9d6d-41a5-a63e-021404e102f3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing temp.cpp\n"
+            "Overwriting temp.cpp\n"
           ]
         }
       ]
@@ -2034,11 +2034,11 @@
     {
       "cell_type": "code",
       "source": [
-        "!g++ temp.cpp; echo \"日本語\" |./a.out"
+        "#!g++ temp.cpp; echo \"日本語\" |./a.out"
       ],
       "metadata": {
         "id": "BnmfvB0QkOFx",
-        "outputId": "371802ed-47fc-462a-fdc7-cfbdde45d307",
+        "outputId": "9584a4dc-0afc-4057-cc74-1411997a88d8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
