Colaboratory を使用して作成しました

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -6,7 +6,7 @@
       "name": "temp.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMIsupDhv8Yd3GMinU7e/Z8",
+      "authorship_tag": "ABX9TyM//tHs100mQ1YrLkf07sBx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,56 @@
       "metadata": {
         "id": "KBSwAUuU4s_Y"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# アイデア lines を作る\n",
+        "# 複数の行からなるテキストで云々。\n",
+        "# vector<str> lines() と言う関数でもとのテキストを行単位の\n",
+        "# 返り値が {\"this is a pen.\", \"これは本です。\"}\n",
+        "# 元のテキストが\n",
+        "# const string  str = R\"(this is a pen.\n",
+        "# これは本です。)\";\n",
+        "%%writefile temp.cpp\n",
+        "# include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "string formatVecStr(vector<string> vec){\n",
+        "    string str = \"\";\n",
+        "    str +=\"{\";\n",
+        "    bool isFirst = true;\n",
+        "    for (auto item : vec){\n",
+        "        if(!isFirst) str += \", \";\n",
+        "        str = str + '\"' + item + '\"';\n",
+        "        isFirst = false;\n",
+        "    };\n",
+        "    str += \"}\";\n",
+        "    return str;\n",
+        "}\n",
+        "\n",
+        "vector<string> lines(string str){\n",
+        "    vector<string> vec = {};\n",
+        "    stringstream ss(str);\n",
+        "    string line = \"\";\n",
+        "    while (getline(ss, line)){\n",
+        "        vec.push_back(line);\n",
+        "    }\n",
+        "    return vec;\n",
+        "}\n",
+        "\n",
+        "int main () {\n",
+        "    const string  str = R\"(this is a pen.\n",
+        "これは本です。)\";\n",
+        "    vector<string> vec = lines(str);\n",
+        "    cout << formatVecStr(vec) << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "1QLPUi9yZjZI"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
