--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPRYE9dsFj0wGdLRwu+8fka",
+      "authorship_tag": "ABX9TyOOiqctSbv9Sxy95sxiLWPP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2048,26 +2048,86 @@
         "# アイデア lines を作る\n",
         "# 複数の行からなるテキストで云々。\n",
         "# vector<str> lines() と言う関数でもとのテキストを行単位の\n",
-        "# 返り値が {\"this is a pen.\", \"これは本\"}\n",
+        "# 返り値が {\"this is a pen.\", \"これは本です。\"}\n",
         "# 元のテキストが\n",
         "# const string  str = R\"(this is a pen.\n",
-        "# これは本)\";\n",
+        "# これは本です。)\";\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
-        "const string  str = R\"(this is a pen.\n",
-        "これは本)\";\n",
+        "\n",
+        "\n",
+        "string formatVecStr(vector<string> vec){\n",
+        "    string str = \"\";\n",
+        "    str +=\"{\";\n",
+        "    bool isFirst = true;\n",
+        "    for (auto item : vec){\n",
+        "        if(!isFirst) str += \", \";\n",
+        "        str = str + '\"' + item + '\"';\n",
+        "        isFirst = false;\n",
+        "    };\n",
+        "    str += \"}\";\n",
+        "    return str;\n",
+        "}\n",
+        "\n",
+        "vector<string> lines(string str){\n",
+        "    vector<string> vec = {};\n",
+        "    stringstream ss(str);\n",
+        "    string line = \"\";\n",
+        "    while (getline(ss, line)){\n",
+        "        vec.push_back(line);\n",
+        "    }\n",
+        "    return vec;\n",
+        "}\n",
         "\n",
         "int main () {\n",
-        "    \n",
+        "    const string  str = R\"(this is a pen.\n",
+        "これは本です。)\";\n",
+        "    vector<string> vec = lines(str);\n",
+        "    cout << formatVecStr(vec) << endl;\n",
         "}"
       ],
       "metadata": {
-        "id": "5ACTxr07am_g"
+        "id": "5ACTxr07am_g",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a1ed4869-12b9-4731-d629-ec1ce75d9d50"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "id": "mMRdK7ymYICW",
+        "outputId": "640879b9-ab4b-4638-faf4-5ae0742df921",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{\"this is a pen.\", \"これは本です。\"}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
