--- a/temp.ipynb
+++ b/temp.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "temp.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyM//tHs100mQ1YrLkf07sBx",
+      "authorship_tag": "ABX9TyMkA6fb7e2K5E2nZbmfixP6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +34,134 @@
       "metadata": {
         "id": "KBSwAUuU4s_Y"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# words を作る。words(str) => vector<str>\n",
+        "# string を単語に分解する。前提、文字列は 1 行\n",
+        "# stringstream を使って直接 words にするように書き直す\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "const string str = \"Now I need a drink.\";\n",
+        "/*\n",
+        "void split(const string &s, char delim, vector<string> &elems) {\n",
+        "    stringstream ss(s);\n",
+        "    string item;\n",
+        "    while (getline(ss, item, delim)) {\n",
+        "        elems.push_back(item);\n",
+        "    }\n",
+        "} \n",
+        "\n",
+        "vector<string> split(const string &s, char delim) {\n",
+        "    vector<string> elems;\n",
+        "    split(s, delim, elems);\n",
+        "    return elems;\n",
+        "}*/\n",
+        "\n",
+        "vector<string> words(const string &str) {\n",
+        "    string str02;\n",
+        "    str02 = regex_replace(str, regex(\"[ .,]+\"), \" \");\n",
+        "    stringstream ss(str02);\n",
+        "    while\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "    vector<string> wordvec;\n",
+        "    wordvec = words(str);\n",
+        "    cout << formatVecStr(wordvec) << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "Ze6xM3OYg2Js"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# とりあえず動いて入るが、ダメなので書き直す\n",
+        "# stringstream を使って直接 words にするように書き直す\n",
+        "# 単語に分解する\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "const string str = R\"(Now I need a drink.\n",
+        "this\n",
+        "is a\n",
+        "pen.)\";\n",
+        "\n",
+        "void split {\n",
+        "    stringstream ss(s);\n",
+        "    string item;\n",
+        "    while (getline(ss, item, delim)) {\n",
+        "        elems.push_back(item);\n",
+        "    }\n",
+        "}\n",
+        "\n",
+        "vector<string> split(const string &s, char delim) {\n",
+        "    vector<string> elems;\n",
+        "    split(s, delim, elems);\n",
+        "    return elems;\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "  string str02;\n",
+        "  str02 = regex_replace(str, regex(\"[ .,]+\"), \" \");\n",
+        "  vector<string> words = split(str02, ' ');\n",
+        "  for (auto& item : words){\n",
+        "      cout << item << \" \";\n",
+        "  }\n",
+        "  cout << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rI6OtbnWrk5N",
+        "outputId": "f731e28d-047d-41d7-975d-2c98e4a3abc7"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xN-bjdaTrkxZ",
+        "outputId": "1d4ea8cd-2194-4cd5-89be-27b46a2a15f9"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Now I need a drink \n",
+            "this\n",
+            "is a\n",
+            "pen \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -150,85 +277,6 @@
           "text": [
             "2 3\n",
             "tiis is a ペン \n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# stringstream\n",
-        "# 単語に分解する\n",
-        "%%writefile temp.cpp\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        "\n",
-        "void split(const string &s, char delim, vector<string> &elems) {\n",
-        "    stringstream ss(s);\n",
-        "    string item;\n",
-        "    while (getline(ss, item, delim)) {\n",
-        "        elems.push_back(item);\n",
-        "    }\n",
-        "}\n",
-        "\n",
-        "vector<string> split(const string &s, char delim) {\n",
-        "    vector<string> elems;\n",
-        "    split(s, delim, elems);\n",
-        "    return elems;\n",
-        "}\n",
-        "\n",
-        "int main() {\n",
-        "  string str = \n",
-        "  \"Now I need a drink.\"\n",
-        "  \"this\"\n",
-        "  \"is a\"\n",
-        "  \"pen\";\n",
-        "  string str02;\n",
-        "  str02; = regex_replace(str1, regex(\"[ .,]+\"), \" \");\n",
-        "  vector<string> words = split(str2, ' ');\n",
-        "  for (auto& item : words){\n",
-        "      cout << item << \" \";\n",
-        "  }\n",
-        "  cout << endl;\n",
-        "}"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "rI6OtbnWrk5N",
-        "outputId": "7dc7a9dc-ffeb-4ddf-d963-cfb28b885460"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Overwriting temp.cpp\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!g++ temp.cpp; ./a.out"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "xN-bjdaTrkxZ",
-        "outputId": "089e546f-95b7-4723-9ebf-b9d95b1c8f51"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "thisis apen \n"
           ]
         }
       ]
