Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOOiqctSbv9Sxy95sxiLWPP",
+      "authorship_tag": "ABX9TyN8IToSPZIhLOyvBAhFO0J9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1955,15 +1955,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "4DmFI4i0E6u0"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# utf-8 の文字数を返す関数を作りたい。そのために\n",
@@ -2007,7 +1998,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2030,7 +2021,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2056,7 +2047,8 @@
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
-        "\n",
+        "const string  str = R\"(this is a pen.\n",
+        "これは本です。)\";\n",
         "\n",
         "string formatVecStr(vector<string> vec){\n",
         "    string str = \"\";\n",
@@ -2082,8 +2074,6 @@
         "}\n",
         "\n",
         "int main () {\n",
-        "    const string  str = R\"(this is a pen.\n",
-        "これは本です。)\";\n",
         "    vector<string> vec = lines(str);\n",
         "    cout << formatVecStr(vec) << endl;\n",
         "}"
@@ -2093,9 +2083,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a1ed4869-12b9-4731-d629-ec1ce75d9d50"
+        "outputId": "359d5490-ea70-48cc-cc59-4a115dc841e8"
       },
-      "execution_count": 19,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -2113,12 +2103,12 @@
       ],
       "metadata": {
         "id": "mMRdK7ymYICW",
-        "outputId": "640879b9-ab4b-4638-faf4-5ae0742df921",
+        "outputId": "bdb3cbe8-b714-45ca-99b1-1f22299fc748",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -2132,10 +2122,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "N3yk1iHVaYc0"
+        "id": "N3yk1iHVaYc0",
+        "outputId": "bd3c3425-2674-46bb-a012-e70d2ca0d09c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# \n",
+        "# string\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "#include <string>\n",
@@ -2143,22 +2137,52 @@
         "int main() {\n",
         "  string myString = \"Hello\";\n",
         "  myString[0] = 'J';\n",
+        "  myString.at(4) = 'A';\n",
         "  cout << myString << endl;\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iOu-_DX2akcc"
+        "id": "iOu-_DX2akcc",
+        "outputId": "379293de-99ab-4fd4-d4cf-71329a374f8c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "JellA\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "D8opfRQis81L"
+      }
     },
     {
       "cell_type": "code",
